# pulsecommerce

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
dashboard/: Home.py  theme.py
dashboard/pages/: 1_📊_Business_Health.py  2_🔻_Funnel_Drop_Off.py  3_📈_Demand_Forecast.py  4_⚠️_Churn_Risk.py  5_🧪_Experiment_Readout.py
data/processed/: churn_metrics.json  experiment.json  funnel_insights.json
docs/: DEPLOY.md  executive_memo.md  kpi_dictionary.md  methodology.md
scripts/: bootstrap.py
sql/marts/: dim_customers.sql  dim_products.sql  fct_orders.sql  fct_sessions.sql
sql/metrics/: customer_rfm.sql  daily_kpis.sql  funnel_segmented.sql  weekly_category.sql
sql/staging/: stg_events.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_users.sql
src/pulsecommerce/: __init__.py  cli.py  config.py  logging_utils.py  pipeline.py  warehouse.py
src/pulsecommerce/analytics/: __init__.py  churn.py  experiment.py  forecast.py  funnel.py  health.py
src/pulsecommerce/data/: generator.py
tests/: conftest.py  test_cli.py  test_experiment.py  test_funnel.py  test_generator.py  test_health.py  test_warehouse.py
