[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsecommerce"
version = "0.1.0"
description = "End-to-end SMB commerce intelligence platform: KPI health, funnel, forecasting, churn, and experimentation on one unified warehouse."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kelvin Asiedu" }]
keywords = ["analytics", "ecommerce", "forecasting", "churn", "experimentation", "duckdb", "streamlit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    "faker>=24.0.0",
    "plotly>=5.18.0",
    "streamlit>=1.32.0",
    "pyarrow>=15.0.0",
    "python-dateutil>=2.8.2",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[project.scripts]
pulsecommerce = "pulsecommerce.cli:main"

[project.urls]
Repository = "https://github.com/kelvinasiedu/pulsecommerce"
Issues = "https://github.com/kelvinasiedu/pulsecommerce/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pulsecommerce = ["sql/**/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=pulsecommerce --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
packages = ["pulsecommerce"]

[tool.coverage.run]
source = ["src/pulsecommerce"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]
